兼容java8并确保依赖正常打包